--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -3,7 +3,11 @@
     <file>images/mainwidget/1leftarrow.png</file>
     <file>images/mainwidget/1rightarrow.png</file>
     <file>images/mainwidget/2leftarrow.png</file>
+    <file>images/mainwidget/1left123.png</file>
+    <file>images/mainwidget/1right123.png</file>
     <file>images/mainwidget/2rightarrow.png</file>
+    <file>images/mainwidget/1leftcomment.png</file>
+    <file>images/mainwidget/1rightcomment.png</file>
     <file>images/mainwidget/warning.png</file>
   </qresource>
   <qresource prefix="/BoardWindow">
