--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>664</width>
-    <height>801</height>
+    <height>803</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -1621,62 +1621,50 @@ This will display realistic 3D stones with stripes and shadow</string>
          <property name="title">
           <string>Default games settings</string>
          </property>
-         <layout class="QGridLayout">
-          <item row="0" column="0">
-           <layout class="QHBoxLayout">
-            <property name="spacing">
-             <number>6</number>
-            </property>
-            <property name="leftMargin">
-             <number>0</number>
-            </property>
+         <layout class="QGridLayout" name="gridLayout_8">
+          <item row="2" column="0" rowspan="2" colspan="2">
+           <layout class="QHBoxLayout" name="horizontalLayout_4">
             <property name="topMargin">
              <number>0</number>
             </property>
-            <property name="rightMargin">
-             <number>0</number>
-            </property>
-            <property name="bottomMargin">
-             <number>0</number>
-            </property>
             <item>
-             <widget class="QLabel" name="TextLabel3_3_3">
-              <property name="toolTip">
-               <string>board size</string>
-              </property>
+             <widget class="QLabel" name="label_7">
               <property name="text">
-               <string>Board size:</string>
-              </property>
-              <property name="wordWrap">
-               <bool>false</bool>
+               <string>Computer color:</string>
               </property>
              </widget>
             </item>
             <item>
-             <widget class="QSpinBox" name="computerSizeSpin">
-              <property name="maximumSize">
+             <spacer name="horizontalSpacer_2">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
                <size>
-                <width>60</width>
-                <height>32767</height>
+                <width>40</width>
+                <height>20</height>
                </size>
               </property>
-              <property name="toolTip">
-               <string>board size</string>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QToolButton" name="computerWhiteButton">
+              <property name="text">
+               <string>...</string>
               </property>
-              <property name="minimum">
-               <number>4</number>
+              <property name="icon">
+               <iconset>
+                <normaloff>:/NewAIGameDlgGui/images/newaigamedlg/image1.png</normaloff>
+                <normalon>:/NewAIGameDlgGui/images/newaigamedlg/image2.png</normalon>:/NewAIGameDlgGui/images/newaigamedlg/image1.png</iconset>
               </property>
-              <property name="maximum">
-               <number>36</number>
-              </property>
-              <property name="value">
-               <number>19</number>
+              <property name="checkable">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
            </layout>
           </item>
-          <item row="1" column="0">
+          <item row="1" column="0" colspan="2">
            <layout class="QHBoxLayout">
             <property name="spacing">
              <number>6</number>
@@ -1733,49 +1721,96 @@ This will display realistic 3D stones with stripes and shadow</string>
             </item>
            </layout>
           </item>
-          <item row="2" column="0">
-           <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item row="0" column="0" colspan="2">
+           <layout class="QHBoxLayout">
+            <property name="spacing">
+             <number>6</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
             <property name="topMargin">
              <number>0</number>
             </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
             <item>
-             <widget class="QLabel" name="label_7">
+             <widget class="QLabel" name="TextLabel3_3_3">
+              <property name="toolTip">
+               <string>board size</string>
+              </property>
               <property name="text">
-               <string>Computer color:</string>
+               <string>Board size:</string>
+              </property>
+              <property name="wordWrap">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
             <item>
-             <spacer name="horizontalSpacer_2">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
+             <widget class="QSpinBox" name="computerSizeSpin">
+              <property name="maximumSize">
                <size>
-                <width>40</width>
-                <height>20</height>
+                <width>60</width>
+                <height>32767</height>
                </size>
               </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QToolButton" name="computerWhiteButton">
-              <property name="text">
-               <string>...</string>
+              <property name="toolTip">
+               <string>board size</string>
               </property>
-              <property name="icon">
-               <iconset resource="q4go.qrc">
-                <normaloff>:/NewAIGameDlgGui/images/newaigamedlg/image1.png</normaloff>
-                <normalon>:/NewAIGameDlgGui/images/newaigamedlg/image2.png</normalon>:/NewAIGameDlgGui/images/newaigamedlg/image1.png</iconset>
+              <property name="minimum">
+               <number>4</number>
               </property>
-              <property name="checkable">
-               <bool>true</bool>
+              <property name="maximum">
+               <number>36</number>
+              </property>
+              <property name="value">
+               <number>19</number>
               </property>
              </widget>
             </item>
            </layout>
           </item>
-          <item row="1" column="1">
+          <item row="4" column="0" colspan="2">
+           <layout class="QHBoxLayout" name="_23">
+            <property name="spacing">
+             <number>6</number>
+            </property>
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QLabel" name="TextLabel3_3_5">
+              <property name="toolTip">
+               <string>board size</string>
+              </property>
+              <property name="text">
+               <string>Default human player name:</string>
+              </property>
+              <property name="wordWrap">
+               <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="humanName"/>
+            </item>
+           </layout>
+          </item>
+          <item row="4" column="2">
            <spacer name="horizontalSpacer_3">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
