--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -29,9 +29,13 @@
     <file>images/boardwindow/clear_select.png</file>
     <file>images/boardwindow/123.png</file>
   </qresource>
+  <qresource prefix="/Help">
+    <file>images/help/gohome.png</file>
+  </qresource>
   <qresource prefix="/">
     <file>images/node_black.xpm</file>
     <file>images/node_white.xpm</file>
+    <file>images/exit.png</file>
     <file>sounds/click.wav</file>
     <file>sounds/connect.wav</file>
     <file>sounds/enter.wav</file>
