--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -1543,76 +1543,6 @@ If you press to enter a move on the board, the move will not be acknowledged if 
        <string>Stones</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_11">
-       <item row="5" column="0">
-        <spacer name="verticalSpacer_15">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="4" column="0" colspan="2">
-        <widget class="QGraphicsView" name="stoneView"/>
-       </item>
-       <item row="0" column="0" colspan="2">
-        <widget class="QGroupBox" name="buttonGroup6">
-         <property name="title">
-          <string>Stones</string>
-         </property>
-         <layout class="QHBoxLayout" name="_24">
-          <item>
-           <widget class="QRadioButton" name="radioButtonStones_2D">
-            <property name="toolTip">
-             <string>flat circled ... ugly but asked for ...</string>
-            </property>
-            <property name="whatsThis">
-             <string>Stone appearance
-
-This will display back and white circles</string>
-            </property>
-            <property name="text">
-             <string>Plain 2D</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="radioButtonStones_3D">
-            <property name="toolTip">
-             <string>plain 3D (no shadow, no stripes)</string>
-            </property>
-            <property name="whatsThis">
-             <string>Stone appearance
-
-this will display simple 3D stones, with no shadow and neither stripes on white stones</string>
-            </property>
-            <property name="text">
-             <string>Old 3D look</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="radioButtonStone_real">
-            <property name="toolTip">
-             <string>Realistic 3D stones with stripes and shadow</string>
-            </property>
-            <property name="whatsThis">
-             <string>Stone appearance
-
-This will display realistic 3D stones with stripes and shadow</string>
-            </property>
-            <property name="text">
-             <string>Shaded 3D</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
        <item row="2" column="0">
         <widget class="QGroupBox" name="whiteGroupBox">
          <property name="title">
@@ -1671,7 +1601,7 @@ This will display realistic 3D stones with stripes and shadow</string>
           <item row="3" column="0">
            <widget class="QLabel" name="label_10">
             <property name="text">
-             <string>Flattened</string>
+             <string>Flattened:</string>
             </property>
            </widget>
           </item>
@@ -1687,6 +1617,83 @@ This will display realistic 3D stones with stripes and shadow</string>
           </item>
          </layout>
         </widget>
+       </item>
+       <item row="4" column="0" colspan="2">
+        <widget class="QGraphicsView" name="stoneView"/>
+       </item>
+       <item row="0" column="0" colspan="2">
+        <widget class="QGroupBox" name="buttonGroup6">
+         <property name="title">
+          <string>Stones</string>
+         </property>
+         <layout class="QHBoxLayout" name="_24">
+          <item>
+           <widget class="QRadioButton" name="radioButtonStones_2D">
+            <property name="toolTip">
+             <string>flat circled ... ugly but asked for ...</string>
+            </property>
+            <property name="whatsThis">
+             <string>Stone appearance
+
+This will display back and white circles</string>
+            </property>
+            <property name="text">
+             <string>Plain 2D</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonStones_3D">
+            <property name="toolTip">
+             <string>plain 3D (no shadow, no stripes)</string>
+            </property>
+            <property name="whatsThis">
+             <string>Stone appearance
+
+this will display simple 3D stones, with no shadow and neither stripes on white stones</string>
+            </property>
+            <property name="text">
+             <string>Old 3D look</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonStone_real">
+            <property name="toolTip">
+             <string>Realistic 3D stones with stripes and shadow</string>
+            </property>
+            <property name="whatsThis">
+             <string>Stone appearance
+
+This will display realistic 3D stones with stripes and shadow</string>
+            </property>
+            <property name="text">
+             <string>Shaded 3D</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QCheckBox" name="stripesCheckBox">
+         <property name="text">
+          <string>Simulate clamshell appearance</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="0">
+        <spacer name="verticalSpacer_15">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item row="2" column="1">
         <widget class="QGroupBox" name="blackGroupBox">
@@ -1756,19 +1763,33 @@ This will display realistic 3D stones with stripes and shadow</string>
           <item row="3" column="0">
            <widget class="QLabel" name="label_11">
             <property name="text">
-             <string>Flattened</string>
+             <string>Flattened:</string>
             </property>
            </widget>
           </item>
          </layout>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QCheckBox" name="stripesCheckBox">
-         <property name="text">
-          <string>Simulate clamshell appearance</string>
-         </property>
-        </widget>
+       <item row="3" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_6">
+         <item>
+          <widget class="QLabel" name="label_15">
+           <property name="text">
+            <string>Ambient light:</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSlider" name="ambientSlider">
+           <property name="maximum">
+            <number>100</number>
+           </property>
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </widget>
