--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -640,7 +640,7 @@ Select the font for the server console (fixed font preferably).</string>
 Enable this box when you want to listen a clicking sound when playing a stone on the board.</string>
             </property>
             <property name="text">
-             <string>Stones</string>
+             <string>Graphics</string>
             </property>
             <attribute name="buttonGroup">
              <string notr="true">soundButtonGroup</string>
@@ -955,147 +955,6 @@ If your language is not supported, you might consider translating qGo. Please ch
        <string>Board Window</string>
       </attribute>
       <layout class="QGridLayout">
-       <item row="5" column="0" colspan="2">
-        <widget class="QGroupBox" name="GoEnginegroup_box_2">
-         <property name="title">
-          <string>Goban</string>
-         </property>
-         <layout class="QGridLayout">
-          <property name="leftMargin">
-           <number>11</number>
-          </property>
-          <property name="topMargin">
-           <number>11</number>
-          </property>
-          <property name="rightMargin">
-           <number>11</number>
-          </property>
-          <property name="bottomMargin">
-           <number>11</number>
-          </property>
-          <property name="spacing">
-           <number>6</number>
-          </property>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_6">
-            <property name="text">
-             <string>Wood image:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QLineEdit" name="LineEdit_Table">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="toolTip">
-             <string>Path to the table picture</string>
-            </property>
-            <property name="whatsThis">
-             <string>Path to the table picture.
-If the picture is not set, or unvalid, a default picture is used by qgo</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="textLabel1_2">
-            <property name="text">
-             <string>Table picture</string>
-            </property>
-            <property name="wordWrap">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QComboBox" name="woodComboBox">
-            <item>
-             <property name="text">
-              <string>Custom file</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Default 1</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Default 2</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Default 3</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Default 4</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Default 5</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-          <item row="3" column="2">
-           <widget class="QPushButton" name="TablePicturePathButton">
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset resource="q4go.qrc">
-              <normaloff>:/PreferencesDialogGui/images/preferences/image1.png</normaloff>:/PreferencesDialogGui/images/preferences/image1.png</iconset>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2">
-           <widget class="QPushButton" name="GobanPicturePathButton">
-            <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset resource="q4go.qrc">
-              <normaloff>:/PreferencesDialogGui/images/preferences/image1.png</normaloff>:/PreferencesDialogGui/images/preferences/image1.png</iconset>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLineEdit" name="LineEdit_goban">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="toolTip">
-             <string>Path to the goban picture</string>
-            </property>
-            <property name="whatsThis">
-             <string>Path to the goban picture.
-If the picture is not set, or unvalid, a default goban is used by qgo</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="textLabel1">
-            <property name="text">
-             <string>Wood filename:</string>
-            </property>
-            <property name="wordWrap">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
        <item row="0" column="0">
         <layout class="QHBoxLayout">
          <property name="spacing">
@@ -1523,7 +1382,7 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </layout>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="5" column="0">
         <spacer name="verticalSpacer_16">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -1543,7 +1402,61 @@ If you press to enter a move on the board, the move will not be acknowledged if 
        <string>Stones</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_11">
-       <item row="2" column="0">
+       <item row="0" column="0" colspan="2">
+        <widget class="QGroupBox" name="buttonGroup6">
+         <property name="title">
+          <string>Stones</string>
+         </property>
+         <layout class="QHBoxLayout" name="_24">
+          <item>
+           <widget class="QRadioButton" name="radioButtonStones_2D">
+            <property name="toolTip">
+             <string>flat circled ... ugly but asked for ...</string>
+            </property>
+            <property name="whatsThis">
+             <string>Stone appearance
+
+This will display back and white circles</string>
+            </property>
+            <property name="text">
+             <string>Plain 2D</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonStones_3D">
+            <property name="toolTip">
+             <string>plain 3D (no shadow, no stripes)</string>
+            </property>
+            <property name="whatsThis">
+             <string>Stone appearance
+
+this will display simple 3D stones, with no shadow and neither stripes on white stones</string>
+            </property>
+            <property name="text">
+             <string>Old 3D look</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonStone_real">
+            <property name="toolTip">
+             <string>Realistic 3D stones with stripes and shadow</string>
+            </property>
+            <property name="whatsThis">
+             <string>Stone appearance
+
+This will display realistic 3D stones with stripes and shadow</string>
+            </property>
+            <property name="text">
+             <string>Shaded 3D</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="1" column="0">
         <widget class="QGroupBox" name="whiteGroupBox">
          <property name="title">
           <string>White stone appearance</string>
@@ -1618,91 +1531,7 @@ If you press to enter a move on the board, the move will not be acknowledged if 
          </layout>
         </widget>
        </item>
-       <item row="4" column="0" colspan="2">
-        <widget class="QGraphicsView" name="stoneView">
-         <property name="verticalScrollBarPolicy">
-          <enum>Qt::ScrollBarAlwaysOff</enum>
-         </property>
-         <property name="horizontalScrollBarPolicy">
-          <enum>Qt::ScrollBarAlwaysOff</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0" colspan="2">
-        <widget class="QGroupBox" name="buttonGroup6">
-         <property name="title">
-          <string>Stones</string>
-         </property>
-         <layout class="QHBoxLayout" name="_24">
-          <item>
-           <widget class="QRadioButton" name="radioButtonStones_2D">
-            <property name="toolTip">
-             <string>flat circled ... ugly but asked for ...</string>
-            </property>
-            <property name="whatsThis">
-             <string>Stone appearance
-
-This will display back and white circles</string>
-            </property>
-            <property name="text">
-             <string>Plain 2D</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="radioButtonStones_3D">
-            <property name="toolTip">
-             <string>plain 3D (no shadow, no stripes)</string>
-            </property>
-            <property name="whatsThis">
-             <string>Stone appearance
-
-this will display simple 3D stones, with no shadow and neither stripes on white stones</string>
-            </property>
-            <property name="text">
-             <string>Old 3D look</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="radioButtonStone_real">
-            <property name="toolTip">
-             <string>Realistic 3D stones with stripes and shadow</string>
-            </property>
-            <property name="whatsThis">
-             <string>Stone appearance
-
-This will display realistic 3D stones with stripes and shadow</string>
-            </property>
-            <property name="text">
-             <string>Shaded 3D</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QCheckBox" name="stripesCheckBox">
-         <property name="text">
-          <string>Simulate clamshell appearance</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0">
-        <spacer name="verticalSpacer_15">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="2" column="1">
+       <item row="1" column="1">
         <widget class="QGroupBox" name="blackGroupBox">
          <property name="title">
           <string>Black stone appearance</string>
@@ -1777,7 +1606,14 @@ This will display realistic 3D stones with stripes and shadow</string>
          </layout>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="2" column="0">
+        <widget class="QCheckBox" name="stripesCheckBox">
+         <property name="text">
+          <string>Simulate clamshell appearance</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
         <layout class="QHBoxLayout" name="horizontalLayout_6">
          <item>
           <widget class="QLabel" name="label_15">
@@ -1797,6 +1633,170 @@ This will display realistic 3D stones with stripes and shadow</string>
           </widget>
          </item>
         </layout>
+       </item>
+       <item row="4" column="0" colspan="3">
+        <widget class="QGroupBox" name="GoEnginegroup_box_2">
+         <property name="title">
+          <string>Goban</string>
+         </property>
+         <layout class="QGridLayout" name="_25">
+          <property name="leftMargin">
+           <number>11</number>
+          </property>
+          <property name="topMargin">
+           <number>11</number>
+          </property>
+          <property name="rightMargin">
+           <number>11</number>
+          </property>
+          <property name="bottomMargin">
+           <number>11</number>
+          </property>
+          <property name="spacing">
+           <number>6</number>
+          </property>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>Wood image:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QLineEdit" name="LineEdit_Table">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="toolTip">
+             <string>Path to the table picture</string>
+            </property>
+            <property name="whatsThis">
+             <string>Path to the table picture.
+If the picture is not set, or unvalid, a default picture is used by qgo</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QLabel" name="textLabel1_2">
+            <property name="text">
+             <string>Table picture</string>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QComboBox" name="woodComboBox">
+            <item>
+             <property name="text">
+              <string>Custom file</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Default 1</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Default 2</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Default 3</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Default 4</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Default 5</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="3" column="2">
+           <widget class="QPushButton" name="TablePicturePathButton">
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="q4go.qrc">
+              <normaloff>:/PreferencesDialogGui/images/preferences/image1.png</normaloff>:/PreferencesDialogGui/images/preferences/image1.png</iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QPushButton" name="GobanPicturePathButton">
+            <property name="text">
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset resource="q4go.qrc">
+              <normaloff>:/PreferencesDialogGui/images/preferences/image1.png</normaloff>:/PreferencesDialogGui/images/preferences/image1.png</iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="LineEdit_goban">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="toolTip">
+             <string>Path to the goban picture</string>
+            </property>
+            <property name="whatsThis">
+             <string>Path to the goban picture.
+If the picture is not set, or unvalid, a default goban is used by qgo</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="textLabel1">
+            <property name="text">
+             <string>Wood filename:</string>
+            </property>
+            <property name="wordWrap">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <spacer name="verticalSpacer_15">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="3" column="0" colspan="3">
+        <widget class="SizeGraphicsView" name="stoneView">
+         <property name="verticalScrollBarPolicy">
+          <enum>Qt::ScrollBarAlwaysOff</enum>
+         </property>
+         <property name="horizontalScrollBarPolicy">
+          <enum>Qt::ScrollBarAlwaysOff</enum>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -4161,6 +4161,13 @@ Click to get a new, editable offline window.</string>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>SizeGraphicsView</class>
+   <extends>QGraphicsView</extends>
+   <header>sizegraphicsview.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>tabWidget</tabstop>
   <tabstop>languageComboBox</tabstop>
@@ -4328,38 +4335,6 @@ Click to get a new, editable offline window.</string>
    <signal>clicked()</signal>
    <receiver>PreferencesDialogGui</receiver>
    <slot>slot_accept()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>GobanPicturePathButton</sender>
-   <signal>clicked()</signal>
-   <receiver>PreferencesDialogGui</receiver>
-   <slot>slot_getGobanPicturePath()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>20</x>
-     <y>20</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>TablePicturePathButton</sender>
-   <signal>clicked()</signal>
-   <receiver>PreferencesDialogGui</receiver>
-   <slot>slot_getTablePicturePath()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>20</x>
